<resources>
    <string name="app_name">CET Application</string>
    <string name="logo">Logo</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="formulas">Formulas</string>
    <string name="geometry">Geometry</string>
    <string name="trigo">Trigo</string>
    <string name="mini_games">Mini Games</string>
    <string name="mini_games_title">MINI GAMES</string>
    <string name="mini_easy">EASY</string>
    <string name="mini_mid">MEDIUM</string>
    <string name="mini_hrd">HARD</string>
    <string name="formula">Formula</string>
    <string name="UC_hint2">100</string>
    <string name="UC_hint1">1</string>
    <string name="practice_exercises">Practice Exercises!</string>
    <string name="textview">TextView</string>
    <string name="show_answer">SHOW ANSWER</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="sin_cos_tan_cot_are_respectively">Sinθ, cosθ, tanθ, cotθ are respectively:</string>
</resources>