<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/background2"
    tools:context=".MiniGamesActivity">

    <TextView
        android:id="@+id/miniGame_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gelion_black"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/mini_games_title"
        android:textAllCaps="true"
        android:textColor="#009688"
        android:textColorHint="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        tools:text="Mini Games" />

    <Button
        android:id="@+id/miniEasy_Btn"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:background="@drawable/buttons_layout1"
        android:fontFamily="@font/gelion_medium"
        android:text="@string/mini_easy"
        android:textAllCaps="true"
        android:textColor="@color/soft_cyan"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        tools:text="Easy" />

    <Button
        android:id="@+id/miniMid_Btn"
        android:layout_width="142dp"
        android:layout_height="57dp"
        android:background="@drawable/buttons_layout1"
        android:fontFamily="@font/gelion_medium"
        android:text="@string/mini_mid"
        android:textAllCaps="true"
        android:textColor="@color/soft_cyan"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519"
        tools:text="Medium" />

    <Button
        android:id="@+id/miniHrd_Btn"
        android:layout_width="141dp"
        android:layout_height="58dp"
        android:background="@drawable/buttons_layout1"
        android:fontFamily="@font/gelion_medium"
        android:text="@string/mini_hrd"
        android:textAllCaps="true"
        android:textColor="@color/soft_cyan"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        tools:text="Hard" />

</android.support.constraint.ConstraintLayout>